--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "scripts": {
     "start": "nodemon app.js"
   },
+  "engines": {
+    "node": "16.14.2",
+    "npm": "8.5.0"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/lcondon14/web-420.git"
