--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "nodemon app.js"
   },
   "engines": {
-    "node": "16.14.2",
+    "node": "16.20.1",
     "npm": "8.5.0"
   },
   "repository": {
@@ -27,7 +27,8 @@
     "mongodb": "^5.7.0",
     "mongoose": "^5.12.3",
     "swagger-jsdoc": "^6.1.0",
-    "swagger-ui-express": "^4.1.6"
+    "swagger-ui-express": "^4.1.6",
+    "bson": "6.1.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
