--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "web-420",
   "version": "1.0.0",
   "description": "* Professor Richard Krasso * Laurel Condon",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "start": "nodemon app.js"
   },
